--- a/views/register.ejs
+++ b/views/register.ejs
@@ -55,9 +55,9 @@
               <div class="@[480px]:px-4 @[480px]:py-3">
                 <div
                   class="bg-cover bg-center flex flex-col justify-end overflow-hidden bg-white @[480px]:rounded-xl min-h-[218px]"
-                  style='background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 25%), url("https://lh3.googleusercontent.com/aida-public/AB6AXuDxspOmRLcMDAfi9IOq2seqMAkD-CCeJlPRMUGcQ0JcG3c1NQQZbMJiqNIMXLv7KrfdpKK5vR4Tlj5AfLXoP5jNnsdwep90GuZSpkj68osSAV8fPu0zQ9Y7SdSVxOkVnOmPUcXl4tZ363N9JeRB9QuyaN4bsFisJKfCB0aCZby3hjRLywPYZZH_3d-KNoM3orqS39MCwM6ZusvVDrNfSVljdwEJN3zQ8RXpS2hTGkKK4_pBMpNdEfrYrvGKJps7LyzjRn8nfVRJnav-");'
+                  style='background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 25%), url("/banner1.jpg");'
                 >
-                  <div class="flex p-4"><p class="text-white tracking-light text-[28px] font-bold leading-tight">Welcome to SkillSwap-Hub</p></div>
+                  <div class="flex p-4"><p class="text-white tracking-light text-[28px] font-bold leading-tight">Welcome to <span class="text-[#fcdfd4]">SkillSwap-Hub</span></p></div>
                 </div>
               </div>
             </div>
@@ -98,7 +98,7 @@
             </div>
 
             <div class="flex px-4 py-3">
-              <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-[#778fb5] text-[#131416] text-sm font-bold leading-normal tracking-[0.015em]">
+              <button class="flex min-w-[84px] max-w-[300px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 flex-1 bg-[#778fb5] text-[white] text-sm font-bold leading-normal tracking-[0.015em]">
                 Register
               </button>
             </div>
