--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -22,7 +22,7 @@
         <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#f1f2f4] px-10 py-3">
           <div class="flex items-center gap-4 text-[#121417]">
             <div class="size-4">
-              <svg viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg viewBox="0 0 48 48" fill="non e" xmlns="http://www.w3.org/2000/svg">
                 <path
                   d="M24 45.8096C19.6865 45.8096 15.4698 44.5305 11.8832 42.134C8.29667 39.7376 5.50128 36.3314 3.85056 32.3462C2.19985 28.361 1.76794 23.9758 2.60947 19.7452C3.451 15.5145 5.52816 11.6284 8.57829 8.5783C11.6284 5.52817 15.5145 3.45101 19.7452 2.60948C23.9758 1.76795 28.361 2.19986 32.3462 3.85057C36.3314 5.50129 39.7376 8.29668 42.134 11.8833C44.5305 15.4698 45.8096 19.6865 45.8096 24L24 24L24 45.8096Z"
                   fill="currentColor"
@@ -44,7 +44,7 @@
         <div class="px-40 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col w-[512px] max-w-[512px] py-5 max-w-[960px] flex-1">
             <div class="flex flex-wrap justify-between gap-3 p-4">
-              <p class="text-[#121417] tracking-light text-[32px] font-bold leading-tight min-w-72 underline decoration-dashed">Complete your profile</p>
+              <p class="text-[#121417] tracking-light text-[32px] font-bold leading-tight min-w-72 underline decoration-dashed">Complete/Edit your profile</p>
             </div>
           <form autocomplete="off" action="/users/profile/home" method="post" enctype="multipart/form-data">
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
@@ -69,8 +69,7 @@
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
               <label class="flex flex-col min-w-40 flex-1">
                 <p class="text-[#121417] text-base font-medium leading-normal pb-2">Bio</p>
-                <textarea placeholder="Tell us about yourself" class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#121417] focus:outline-0 focus:ring-0 border border-[#dde0e4] bg-white focus:border-[#dde0e4] min-h-36 placeholder:text-[#677283] p-[15px] text-base font-normal leading-normal" name="bio">
-                </textarea>
+                <textarea placeholder="Enter your bio here" class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#121417] focus:outline-0 focus:ring-0 border border-[#dde0e4] bg-white focus:border-[#dde0e4] min-h-36 placeholder:text-[#677283] p-[15px] text-base font-normal leading-normal" name="bio"><%= user.bio  %></textarea>
               </label>
             </div>
 
@@ -80,7 +79,8 @@
                 <input
                   placeholder="City, State"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#121417] focus:outline-0 focus:ring-0 border border-[#dde0e4] bg-white focus:border-[#dde0e4] h-14 placeholder:text-[#677283] p-[15px] text-base font-normal leading-normal"
-                  name="location"/>
+                  name="location"
+                  value="<%= user.location %>"/>
               </label>
             </div>
             <div class="flex max-w-[480px] flex-wrap items-end gap-4 px-4 py-3">
