--- a/views/home.ejs
+++ b/views/home.ejs
@@ -50,7 +50,7 @@
             <div class="flex items-center gap-9">
               <a class="text-[#131416] text-sm font-medium leading-normal" href="#">Home</a>
               <a class="text-[#131416] text-sm font-medium leading-normal" href="/users/about-us">About Us</a>
-              <a class="text-[#131416] text-sm font-medium leading-normal" href="#">Services</a>
+              <a class="text-[#131416] text-sm font-medium leading-normal" href="/users/myCourse">My courses</a>
               <a class="text-[#131416] text-sm font-medium leading-normal" href="/users/contact">Contact</a>
             </div>
             <div class="relative">
