completed the instructor page just before setting up websockes/webrtc

--- a/views/myCourse.ejs
+++ b/views/myCourse.ejs
@@ -62,6 +62,7 @@
                       Price: $<%=course.price%> | Duration: <%=course.duration%> weeks | Instructor: <%= user.name%>| Skills offered: <%=  course.skillsOffered &&  course.skillsOffered.join(", ") %> | About: <%= course.about %>
                     </p>
                   </div>
+                  <div class="flex space-x-4">
                   <a
                     class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-8 px-4 flex-row-reverse bg-[#f1f2f4] text-[#121417] pr-2 gap-1 text-sm font-medium leading-normal w-fit" href="/users/myCourse/<%= course._id %>"
                   >
@@ -74,6 +75,22 @@
                     </div>
                     Edit
                 </a>
+
+                <a
+                  class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-8 px-4 flex-row-reverse bg-red-400 text-[#121417] pr-2 gap-1 text-sm font-medium leading-normal w-fit" 
+                  href="/users/myCourse/delete/<%= course._id %>"
+                  >
+                  <div class="text-[#121417]" data-icon="Trash" data-size="18px" data-weight="regular">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" fill="currentColor" viewBox="0 0 256 256">
+                  <path
+                    d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
+                    ></path>
+                  </svg>
+                    </div>
+                      Delete
+                </a>
+                </div>
+
                 </div>
                 <div
                   class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl flex-1"
