--- a/views/course-id.ejs
+++ b/views/course-id.ejs
@@ -91,9 +91,11 @@
               <label class="flex flex-col min-w-40 flex-1">
                 <select
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#121417] focus:outline-0 focus:ring-0 border border-[#dde0e4] bg-white focus:border-[#dde0e4] h-14 placeholder:text-[#677283] p-[15px] text-base font-normal leading-normal" name="skillsOffered">
-                  <option value="one">Select a skill to offer</option>
-                  <option value="two">two</option>
-                  <option value="three">three</option>
+                  <option>Select a skill to offer</option>
+                  <option value="Development">Development</option>
+                  <option value="Design">Design</option>
+                  <option value="Business">Business</option>
+                  <option value="Cooking">Cooking</option>
                 </select>
               </label>
             </div>
