--- a/views/course.ejs
+++ b/views/course.ejs
@@ -88,9 +88,11 @@
               <label class="flex flex-col min-w-40 flex-1">
                 <select
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#121417] focus:outline-0 focus:ring-0 border border-[#dde0e4] bg-white focus:border-[#dde0e4] h-14 placeholder:text-[#677283] p-[15px] text-base font-normal leading-normal" name="skillsOffered">
-                  <option value="one">Select a skill to offer</option>
-                  <option value="two">two</option>
-                  <option value="three">three</option>
+                  <option>Select a skill to offer</option>
+                  <option value="Development">Development</option>
+                  <option value="Design">Design</option>
+                  <option value="Business">Business</option>
+                  <option value="Cooking">Cooking</option>
                 </select>
               </label>
             </div>
@@ -104,14 +106,15 @@
                 <input type="file" name="courseImage">
               </div>
             </div>
+            <input type="hidden" name="instructorID" value="<%= user._id %>">
             <div class="flex px-4 py-3 justify-end">
               <button
                 class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-10 px-4 bg-[#1f4179] text-white text-sm font-bold leading-normal tracking-[0.015em]"
               >
                 Submit
               </button>
+
             </div>
-          
         </form>
         </div>
 
